Update overflow issues  on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body {
 .Footer {
   width: 100%;
   padding: 1rem;
+  padding-inline-start: 2rem;
   font-size: 1.2rem;
   display: flex;
   justify-content: space-between;
@@ -75,15 +76,6 @@ hr {
 .Navs a:hover {
   text-decoration: underline;
 }
-
-/* .topContainer {
-  display: flex;
-  gap: 2rem;
-  margin-inline: 3rem;
-  padding: 1rem 0 1rem 1rem;
-  justify-content: space-between;
-  align-items: center;
-} */
 
 .Name {
   display: flex;
